@@ -39,6 +39,21 @@ int main(){}
 " ${VAR})
 ENDMACRO(MACRO_TEST ARG VAR)
 
+MACRO(CHECK_COMPILER_VISIBILITY VAR)
+SET(CMAKE_REQUIRED_FLAGS_BACK "${CMAKE_REQUIRED_FLAGS}")
+SET(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -fvisibility=hidden")
+CHECK_C_SOURCE_COMPILES(
+"void __attribute__((visibility(\"default\"))) test() {}
+int main(){}
+" ${VAR})
+SET(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS_BACK}")
+IF(${VAR})
+  ADD_DEFINITIONS(-fvisibility=hidden)
+  ADD_DEFINITIONS(-DHAVE_GCC_VISIBILITY)
+ENDIF(${VAR})
+ENDMACRO(CHECK_COMPILER_VISIBILITY VAR)
+
+
 ADD_DEFINE("PACKAGE_VERSION \"${PACKAGE_VERSION}\"")
 
 # We need ISO C99 features (e.g. snprintf) and POSIX IEEE Std 1003.1b-1993
@@ -188,7 +203,7 @@ OPTION(NULLOUT "null out backend" ON)
 OPTION(SDL "sdl backend" OFF)
 IF(WIN32)
   OPTION(DSOUND "directsound backend" OFF)
-ENDIF(WIN32)  
+ENDIF(WIN32)
 
 # additional codecs
 OPTION(VORBIS "vorbis support" OFF)
@@ -573,7 +588,7 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
 
     IF(NOT HAVE_NASM MATCHES "NOTFOUND")
       PROJECT(OpenAL ASM)
-      MESSAGE(STATUS "Found NASM")
+      MESSAGE(STATUS "Using NASM")
       ADD_DEFINE(HAVE_CPU_CAPS_DETECTION)
       SET(ARCH_OBJS ${ARCH_OBJS} ${x86_NASM_OBJS})
 
@@ -581,6 +596,8 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
         SET(ARCH_OBJS ${ARCH_OBJS} ${x86_MMX_NASM_OBJS})
         ADD_DEFINE(HAVE_MMX_MEMCPY)
       ENDIF(MMX_ENABLED)
+    ELSE(NOT HAVE_NASM MATCHES "NOTFOUND")
+      MESSAGE("Warning: MMX capability found, but NASM not found. Without NASM no SIMD detection (MMX enabled by default) and no MMX memcopy is built.")
     ENDIF(NOT HAVE_NASM MATCHES "NOTFOUND")
   ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "i.86")
 
@@ -600,6 +617,8 @@ ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_6
 
 
 # compiler specific settings
+
+CHECK_COMPILER_VISIBILITY(HAVE_VISIBILITY)
 IF(CMAKE_COMPILER_IS_GNUCC)
   ADD_DEFINITIONS(-std=c99)
 
