@@ -1,3 +1,10 @@
+2005-12-17  Prakash Punnoor <prakash@punnoor.de>
+
+	* admin/CMakeModules/CMakeASMInformation.cmake: don't use C flags
+	
+	* CMakeLists.txt, common/include/AL/alc.h, common/include/AL/al.h:
+	gcc visibility support
+
 2005-12-15  Sven Panne  <sven.panne@aedion.de>
 
 	* include/AL/Makefile.am: Removed.
